# ChatDatabase

./: .env.example  .gitignore  main.py  pyproject.toml  requirement.md  step.md
database/: create_db.py  test_getall_repo.py  text_summary_readme.py
test/: test_collector.py
