[project]
name = "chatdatabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.38.2",
    "langchain-community>=0.3.27",
    "loguru>=0.7.3",
    "openai>=1.97.1",
    "pymupdf>=1.26.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
 
[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
